--- a/Mex_visual/libraries/frameworks/io2012/default/layouts/twocol.html
+++ b/Mex_visual/libraries/frameworks/io2012/default/layouts/twocol.html
@@ -1,10 +1,10 @@
 ---
 layout: slide
 ---
-{{{ content }}}
-<div style='float:left;width:48%;' class='centered'>
-  {{{ left }}}
-</div>
-<div style='float:right;width:48%;'>
-  {{{ right }}}
+{{{ content }}}  
+<div class='left' style='float:left;width:{{{ w1 }}}'>
+ {{{ left }}}
+</div>    
+<div class='right' style='float:right;width:{{{ w2 }}}'>
+ {{{ right }}}
 </div>
