--- a/Mex_visual/assets/layouts/twocol.html
+++ b/Mex_visual/assets/layouts/twocol.html
@@ -8,3 +8,4 @@ layout: slide
 <div class='right' style='float:right;width:{{{ w2 }}}'>
  {{{ right }}}
 </div>
+<div style='position: absolute; bottom:-10px;float:right;width:80%'><font color='#979797'> {{{ bottom }}}</font></div>
